Actualización de index y pasatiempo2, agregado contenido en la carpeta de imagenes

--- a/Hugo-0699/pasatiemposmod/pasatiempo2.html
+++ b/Hugo-0699/pasatiemposmod/pasatiempo2.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasatiempo 2</title>
+    <title>Pagina 2</title>
+    <link rel="stylesheet" href="">     <!-- Estilos CSS proximamente -->
+    <link rel="icon" href="imagenes/iconogames.png" type="image/png">
 </head>
 <body>
-    
+<body>
+    <header> 
+        <h1>LOS VIDEO-JUEGOS &star;&hearts;</h1>
+    </header>
+    <hr>
+    <main>
+        <article>
+            <header>
+                <h2> No son muchos, pero les presento...</h2>
+            </header>
+            <p> </p>
+
+            <h4>A continuación, </h4>
+
+            <figure>
+                <img width="290px" src="" alt="">
+                <img width="300px" src="" alt="">
+                <img width="390px" src="" alt="">
+            </figure>
+            <hr>
+            <h4>Descripción:</h4>
+            
+        </article>
+    </main>
+    <hr>
+
+    <aside></aside>
+
+    <footer>
+        <address>
+            <h4>
+                Desarrollado por el alumno: Hugo Alejandro Zapata Rosales
+            </h4>
+        </address>
+    </footer>
 </body>
 </html>
