--- a/Hugo-0699/pasatiemposmod/index.html
+++ b/Hugo-0699/pasatiemposmod/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina principal</title>
+    <meta name="description" content="Pasatiempos de Hugo Alejandro Zapata Rosales">
+    <meta name="keywords" content="dibujo, videojuegos, gym, escritura">
+    <meta name="author" content="Hugo lejandro Zapata Rosales">
+    <link rel="icon" href="imagenes/icono-inicial.png" type="image/png">
+
 </head>
 <body>
 
