links, article, img, ul

--- a/FernandaGomezG/practica3/pagina1.html
+++ b/FernandaGomezG/practica3/pagina1.html
@@ -22,13 +22,21 @@
             <article>
                 <h2 style="margin-left: 800px;bottom: 580px;" class="titulosarticle">Artista</h2>
                 <section>
-                    <h3 style="margin-left: 800px; margin-right: 200px; bottom: 600px;" class="section"> <li><a href="https://www.instagram.com/morat?igsh=djkyMWpmZnU5OWMw">Morat</a></li></h3>
+                    <h3 style="margin-left: 800px; margin-right: 200px; bottom: 600px;" class="section"> <a href="https://www.instagram.com/morat?igsh=djkyMWpmZnU5OWMw">Morat</a></h3>
                     <img src="img/moratimg.jpeg" alt="Concierto de Morat" class="img2" style="margin-left: 830px; bottom: 600px;">
-                    <p> Morat es una banda de música de género pop, está compuesta por 4 integrantes colombianos:
-                    </p>
+                    <p style="margin-left: 800px; margin-right: 200px; bottom: 590px;" class="textostylearticle"> Morat es una banda de música de género pop, está compuesta por 4 integrantes colombianos:</p>
+                    <ul>
+                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/jpabloisaza?igsh=em80ZzRobnA5dXQ2">Juan Pablo Isaza- Teclado, guitarra</a></li>
+                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/jpvillamil7?igsh=MXJpbmFzbXg3b3Vxcg==">Juan Pablo Villamil- Guitarra, banjo </a></li>
+                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/simonvargasm?igsh=NnYyZHV4NHNvdjFl">Simón Vargas- Bajo</a></li>
+                        <li style="margin-left: 800px; margin-right: 200px; position: relative; bottom: 600px;"><a href="https://www.instagram.com/martinvargas96?igsh=MW9hazVjYm5vY29vMw==">Martín Vargas- Percusión</a></li>
+                    </ul>
+                    <p style="margin-left: 800px; margin-right: 200px; bottom: 590px;" class="textostylearticle">La banda se formó debido a que se conocen desde pequeños, desde que eran estudiantes y tenían como hobbie la música, entonces nació el sueño
+                        de tener una banda de música, así que comenzaron a presentarse con sus canciones o covers en bares locales y con poca audiencia.
+                        Aunque actualmente son de las bandas de pop con más baladas románticas y de desamor y han llegado a presentarse en muchos países.</p>
                 </section>
                 <aside><a href="https://open.spotify.com/playlist/42MoOwzPduAMa3QCqBhKgk?si=aipuISCiSFyM9H4J8f_2ZA">Setlist, Los estadios Tour 2024.</a></aside>
-
+                
             </article>
         </main>
     </header>
