--- a/oswtobias06/pasatiempos2/pag1.html
+++ b/oswtobias06/pasatiempos2/pag1.html
@@ -4,23 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cine</title>
+    <link rel="stylesheet" href="estilos.css">
+
 </head>
 <body>
     <header>
         <h1>Cine</h1>
     </header>
-    <nav></nav>
-    <main>
+    <main class="parraf">
         <h3> Ver peliculas o series</h3>
         <p>En las noches cuando tengo tiempo libre, suelo ver algun tipo de contenido de esto, ahorita estoy viendo Solar Opposities, una serie que me encanta por el humor que maneja.</p>
-        <img width="500" src="img/verseries.jpg" alt="series" srcset="">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TU81l-n7nc0?si=1IfZd5UcUNDEsGfB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
     </main>
-    <aside></aside>
+    <aside>
+        <p><b>CONTENIDO</b></p>
+        <li> Cine </li>
+        <li> Musica </li>
+        <li> Deportes </li>
+        <li> Coleccion </li>
+        <li> Archivos </li>
+    </aside>
+    <br>
     <footer>
         <address>
             <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
+        <br>
         <b>
             <a href="index.html">Volver a página principal</a>
         </b>
