--- a/oswtobias06/pasatiempos2/pag3.html
+++ b/oswtobias06/pasatiempos2/pag3.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deportes</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
         <h1>Deportes</h1>
     </header>
-    <nav></nav>
-    <main>
+    <main class="parraf">
         <h3> Ver partidos de fútbol</h3>
         <p>Uno de mis pasatiempos que hago con frecuencia es este, ya que cada vez que juega mi equipo de Tigres siempre planeo el día para quedar desocupado a la hora del juego. También cuando tengo tiempo me veo otros partidos que esten interesante como los que se jugaron en el mundial de clubes.</p>
-        <img width="500" src="img/futbol.jpg" alt="futbol" srcset="">
+        <img width="500" src="files/futbol.jpg" alt="futbol" srcset="">
     </main>
-    <aside></aside>
+    <aside>
+        <p><b>CONTENIDO</b></p>
+        <li> Cine </li>
+        <li> Musica </li>
+        <li> Deportes </li>
+        <li> Coleccion </li>
+        <li> Archivos </li>
+    </aside>
     <footer>
+        <br>
         <address>
             <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
+        <br>
         <b>
             <a href="index.html">Volver a página principal</a>
         </b>
