--- a/oswtobias06/pasatiempos2/pag2.html
+++ b/oswtobias06/pasatiempos2/pag2.html
@@ -4,23 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Musica</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
         <h1>Música</h1>
     </header>
-    <nav></nav>
-    <main>
+    <main class="parraf">
         <h3> Escuchar música</h3>
         <p>Cuando hago tarea, voy de camino y regreso a lugares durante el trayecto, o solo para matar tiempo, me gusta poner musica para hacerlo mas llevadero. Principalmente trap, hip-hop y sus derivados, tambien algunos de banda.</p>        
-        <img width="500" src="img/musica.jpg" alt="series" srcset="">
+        <img width="500" src="files/musica.jpg" alt="series" srcset="">
+        <audio controls src="files/btstoris.mp3"></audio>
     </main>
-    <aside></aside>
+    <aside>
+        <p><b>CONTENIDO</b></p>
+        <li> Cine </li>
+        <li> Musica </li>
+        <li> Deportes </li>
+        <li> Coleccion </li>
+        <li> Archivos </li>
+    </aside>
     <footer>
+        <br>
         <address>
             <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
+        <br>
         <b>
             <a href="index.html">Volver a página principal</a>
         </b>
