--- a/oswtobias06/pasatiempos2/pag4.html
+++ b/oswtobias06/pasatiempos2/pag4.html
@@ -4,23 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>figuras coleccionables</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header>
         <h1>Figuras coleccionables</h1>
     </header>
-    <nav></nav>
-    <main>
+    <main class="parraf">
         <h3> Armar figuras Magic block</h3>
         <p>Estas figuras son personajes famosos armables con bloques parecidos a legos, y es muy entretenido estar ahi armandolos, personalmente me gusta mucho armarlos y coleccionarlos, actualmente cuento con 3 figuritas que son bob esponja, hulk y shadow.</p>
-        <img width="500" src="img/magicblock.jpg" alt="magicblock" srcset="">
+        <img width="500" src="files/magicblock.jpg" alt="magicblock" srcset="">
     </main>
-    <aside></aside>
+    <aside>
+        <p><b>CONTENIDO</b></p>
+        <li> Cine </li>
+        <li> Musica </li>
+        <li> Deportes </li>
+        <li> Coleccion </li>
+        <li> Archivos </li>
+    </aside>
+    <br>
     <footer>
         <address>
             <p>Desarrollado por Oswaldo Isai Tobias Torres</p>
             <p>Ciudad General Escobedo, Nuevo León</p>
         </address>
+        <br>
         <b>
             <a href="index.html">Volver a página principal</a>
         </b>
