--- a/oswtobias06/index.html
+++ b/oswtobias06/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evidencias</title>
+    <title>Evidencias OITT</title>
 </head>
 <body>
     <header>
@@ -29,6 +29,17 @@
         <li><a href="https://fdw52ad2025.github.io/website52/oswtobias06/index.html" target="_blank">Pagina personal
 </a></li>
         <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-08-20&until=2025-08-22" target="_blank">Commits
+</a></li>
+        </article>
+        <article>
+            <h3>Practica 3</h3>
+        <p>En la practica 3 de la evidencia 1, retomamos el trabajo de la evidencia 1 que trataba sobre nuestros pasatiempos para modificarla aqui, de manera que se dividió en 5 páginas que describen los pasatiempos y nuevas funciones, las cuales se acceden desde un menú principal, </p>
+        <h3>Links - Fechas del 27 a 29 de agosto</h3>
+        <li><a href="https://fdw52ad2025.github.io/website52/oswtobias06/pasatiempos2/index.html">Pagina pasatiempos2
+</a></li>
+        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-08-27&until=2025-08-27" target="_blank">Commits en clase
+</a></li>
+        <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=oswtobias06&since=2025-08-27&until=2025-08-28" target="_blank">Commits 
 </a></li>
         </article>
     </main>
