finalizacion de pagina pasatiempos

--- a/1jecc/pasatiempos_practica3/pasatiempo_deportes.html
+++ b/1jecc/pasatiempos_practica3/pasatiempo_deportes.html
@@ -20,6 +20,19 @@
             <img class="imagen" src="WhatsApp Image 2025-08-27 at 9.01.15 AM.jpeg" height="315" >
         </main>
     </article>
+
+
+        </article>
+    <article class="caja_sombreada_futbol1">
+        <main>
+            
+            <h2 class="centro">Equipos Favoritos</h2>
+
+            <p>Tambien le voy al equipo de real madrid y tigres, eh visto mucho el futbol partodos finales e ido al estadio de los tigres haberlos jugar , desde pequeño me encanta ver los partidos y del real madrid de las 3 champions seguidas y siempre e disfrutado ver los partidos y claro en especial de los equipos que me encantan aveces hasta veia muchas repeticiones de partidos para volver a ver los goles y analizar los partidos</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/859iFtkCH6w?si=1_84P8lUDqNsENgw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <img class="imagen1" src="https://cloudfront-us-east-1.images.arcpublishing.com/eluniversal/7XISSXV5MRELTPHKKZZJHNHWCQ.jpg" height="315" >
+        </main>
+    </article>
     
 
     <nav></nav>
