--- a/ernesgarcia06/pasatiemposver2/pagina3.html
+++ b/ernesgarcia06/pasatiemposver2/pagina3.html
@@ -10,6 +10,18 @@
 <body class="fondos">
     <a href="index.html"><span style="font-size: 30px;">⬅️</span></a>
 
-    
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <nav>
+       
+    </nav>
+    <aside></aside>
+    <footer>
+        <address>&copy;Desarrollado por Luis Ernesto Guzmán García</address>
+    </footer>
 </body>
 </html>
