--- a/MiguelABanda/index.html
+++ b/MiguelABanda/index.html
@@ -27,6 +27,17 @@
                 <li><a href="https://github.com/MiguelABanda/Pratica1_Pasatiempos_MiguelBanda/commits/main/">Links de los Commit</a></li>
                 <li><a href="https://miguelabanda.github.io/Pratica1_Pasatiempos_MiguelBanda/">Sitio Públicado</a></li>
         </ul>
+
+        <h1>Practica 3</h1>
+        <p>Modificar la página pasatiempos que desarrollo en su cuenta personal. Está practica consiste en realizar la versión 2 sobre sus pasatiempos, pero esta vez se tiene que guardar en la organización. Se solicita que utilice 5 archivos html para la información de sus pasatiempos. </p>
+
+        <h2>Links</h2>
+        <ul>
+                <li><a href="https://miguelabanda.github.io/PasatiemposVersion2/">Link de Pasatiempo Versión 2</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/MiguelABanda/pasatiempos2?since=2025-08-27&until=2025-08-27/"> Links de los Commit el dia 27 de Agosto</a></li>
+                <li><a href="https://github.com/FDW52AD2025/website52/commits/main/MiguelABanda/pasatiempos2?since=2025-08-27&until=2025-08-28">Link de los Commit del 27 de agosto al 29 de agosto</a></li>
+        </ul>
+
     
     </main>
     <aside></aside>
