Apartado Inicio y Anime

--- a/Bere-ops/Pasatiempos_Ver2/index.html
+++ b/Bere-ops/Pasatiempos_Ver2/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mis pasatiempos 2.0</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Mis Pasatiempos - Versión 2</title>
+  <link rel="stylesheet" href="styles.css">
+  <audio src="intro_ouran.mp4" autoplay loop></audio>
 </head>
 <body>
-    
-</body>
-</html>
+<header>
+  <h1>Mis Pasatiempos</h1>
+  <nav>
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="series.html">Anime</a></li>
+      <li><a href="libros.html">Libros</a></li>
+      <li><a href="videojuegos.html">Videojuegos</a></li>
+      <li><a href="griega.html">Cultura Griega</a></li>
+      <li><a href="musica.html">Música</a></li>
+    </ul>
+  </nav>
+</header>
+
+<main class="layout">
+  <article>
+    <h1>BIENVENIDOS</h1>
+    <p>En esta sección podrás escoger el apartado que más te agrade  &hearts;</p>
+  </article>
+
+  <aside>
+    <h3>Datos rápidos</h3>
+    <ul>
+      <li>Sección de Anime 🍥</li>
+      <li>Sección de Libros 📚</li>
+      <li>Sección de Videojuegos 🕹️</li>
+      <li>Sección de Cultura Griega 🏛️</li>
+      <li>Sección de Música 🎧</li>
+    </ul>
+  </aside>
+</main>
+<footer>
+    <p><small>Hecho por Mayrin Berenice Solis Santiago</small></p>
+    <p><small>Cadereyta Jiménez N.L</small></p>
+</footer>
+
+</body></html>
