--- a/Bere-ops/index.html
+++ b/Bere-ops/index.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prácticas</title>
 </head>
 <body>
     <header>
         <h1>Evidencias Fundamentos de desarrollo web</h1>
     </header>
     <main>
-        <h1>Práctica 2</h1>
+        <h1>Práctica 1</h1>
         <p>En esta práctica pusimos en prueba los conocimientos vistos en la clase del 18-08, de acuerdo a la Evidencia 1.</p>
         <ul>
             <li><a href="https://github.com/Bere-ops/Practica_1.git">Repositorio de GitHub</a></li>
             <li><a href="https://github.com/Bere-ops/Practica_1/commits/main/">Commits realizados</a></li>
             <li><a href="https://bere-ops.github.io/Practica_1/">Página web</a></li>
         </ul>
-        <h2> Fechas </h2>
-        <p>Del 14 al 15 de agosto</p>
+        <h2>Fecha de los commits</h2>
+        <p>14 al 15 de agosto</p>
 
         <h2>Práctica 2</h2>
-        <p>En esta práctica se realizó esta página para ir registrando nuestros trabajos del semestre</p>
+        <p>En esta práctica se creó una carpeta personal en la organización y dentro de la misma se agregó un archivo llamado index.html.</p>
         <ul>
-            <li><a href="https://github.com/FDW52AD2025/website52/blob/5f59d163f489cdf0244524124ca05d2087fa2afc/index.html">Link Commits</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/blob/main/Bere-ops/index.html">Link Página Principal: </a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/Bere-ops/index.html?since=2025-08-20&until=2025-08-20">Link Commits: </a></li>
         </ul>
+        <h2>Fecha de los commits</h2>
+        <p>20 al 22 de Agosto</p>
     </main>
     <aside></aside>
     <footer></footer>
