--- a/Bere-ops/Pasatiempos_Ver2/series.html
+++ b/Bere-ops/Pasatiempos_Ver2/series.html
@@ -23,7 +23,7 @@
 
 <main class="layout">
   <article>
-    <h2>Anime 💖</h2>
+    <h2><span style="font-size: 35px;">Anime 💖</span></h2>
 
     <section>
       <p> El primer anime que vi fue <cite><strong>Naruto</strong></cite>, y la verdad le tengo mucho cariño y nostalgia.</p>
@@ -32,7 +32,7 @@
     </section>
 
     <section>
-      <h3>Animes favoritos</h3>
+      <h3><span style="font-size: 25px;">Animes Favoritos</h3>
       <h4><cite>Ouran High School Host Club</cite> y <cite>La vida desastrosa de Saiki</cite></h4>
       <p>Han sido mis favoritos desde hace años, ya que, por ejemplo, <cite>Ouran</cite> tiene una trama de romance combinada con comedia; para mí eso hace que el anime sea muy entretenido. Después tenemos a <cite>Saiki</cite>, que es más un anime de comedia, pero me gusta mucho el tipo de humor que maneja y la manera en que desarrolla a sus personajes.</p>
 
@@ -43,7 +43,7 @@
     </section>
 
     <section>
-      <h3>Personajes Favoritos</h3>
+      <h3><span style="font-size: 25px;">Personajes Favoritos</h3>
       <p>A continuación te mostraré una tabla con mis personajes favs de todos los animes que he visto:</p>
 
       <table>
