--- a/Bere-ops/Pasatiempos_Ver2/libros.html
+++ b/Bere-ops/Pasatiempos_Ver2/libros.html
@@ -23,7 +23,7 @@
 
 <main class="layout">
   <article>
-    <h2>Libros 💖</h2>
+    <h2><span style="font-size: 35px;">Libros 💖</span></h2>
     <section>
       <p>He leído pocos libros, ya que no soy de las personas que leen uno cada semana. Prefiero, de acuerdo con el libro que estoy leyendo, investigar más a fondo: sobre su autor, la inspiración detrás de su creación, entre otros aspectos.</p>
 
@@ -31,7 +31,7 @@
     </section>
 
     <section>
-        <h3>Libro #1</h3>
+        <h3><span style="font-size: 25px;">Libro #1</span></h3>
         <h4><cite>Almendra</cite></h4>
         <h4><cite>De Won-Pyung Sohn</cite></h4>
         <p>Este fue el primer libro que leí por recomendación de un cantante. No le tenía muchas expectativas, pero, por el hecho de que uno de mis cantantes favoritos lo había leído, decidí darle una oportunidad. El libro narra la historia de <em>Yunjae</em>, un niño que no puede expresar sus sentimientos debido a una condición que padece. A lo largo de los capítulos, se enfrenta a grandes situaciones en las que tiene que aprender a encontrarse a sí mismo en un mundo donde nadie lo comprende.</p>
@@ -40,7 +40,7 @@
     </section>
 
     <section>
-        <h3>Libro #2</h3>
+        <h3><span style="font-size: 25px;">Libro #2</span></h3>
         <h4><cite>Hades, el dios menos malo</cite></h4>
         <h4><cite>De Pol Gise</cite></h4>
         <p>Es el último libro que leí. Anteriormente ya había leído otro del mismo autor, y la verdad me gusta mucho cómo adapta un mito en forma de cuento, haciéndolo más fácil y divertido de entender.</p>
@@ -50,7 +50,7 @@
     </section>
     
     <section>
-        <h3>Libro #3</h3>
+        <h3><span style="font-size: 25px;">Libro #3</span></h3>
         <h4><cite>Sísifo, el hombre que engañó a la muerte</cite></h4>
         <h4><cite>De Pol Gise</cite></h4>
         <p>Este libro también lo leí por recomendación de un amigo, y fue ahí donde conocí al autor <em>Pol Gise</em>. Como ya mencioné, me gusta mucho la forma en que adapta los mitos.</p>
