--- a/FernandaGomezG/practica3/index.html
+++ b/FernandaGomezG/practica3/index.html
@@ -3,11 +3,12 @@
         <head>
             <meta charset="UTF-8">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Evidencias</title>
+            <title>Mis Hobbies</title>
 </head>
 <body>
     <header>
-       pagina
+       <h1>Mis Hobbies y pasatiempos</h1>
+       <p>Mi nombre es</p><a href="https://www.instagram.com/nohemi_garcia09?igsh=ZWJ4d2x6d2VjbzRv" target="_blank">Fernanda Nohemí Gómez García</a>
     </header>
     <main>
     </main>
