CSS y Pasatiempo 3, boceto del 4to pasatiempo

--- a/SunnyWiltshire/index.html
+++ b/SunnyWiltshire/index.html
@@ -43,11 +43,13 @@
 
         <h2>Práctica 3</h2>
         <p>En esta pagina se realizó una modificación de la primera practi</p>
-        <p>Realicé 6 commits, del 20 al 22 de Agosto.</p>
-        <h3>Enlaces de la práctica 2:</h3>
+        <p>Realicé 6 commits, del 27 al 29 de Agosto.</p>
+        <h3>Enlaces de la práctica 3:</h3>
         <ul>
-            <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/index.html">Link Página personal de evidencias</a></li>
-            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-08-20&until=2025-08-22">Link de los commits</a></li>
+            <li><a href="https://fdw52ad2025.github.io/website52/SunnyWiltshire/P2v1/index.html">Página pasatiempos versión 2</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-08-27&until=2025-08-27">Link de los commits del 27 de Agosto.</a></li>
+            <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=SunnyWiltshire&since=2025-08-27&until=2025-08-29">Link de los commits.</a></li>
+
         </ul>
     </main>
     <aside></aside>
