--- a/SunnyWiltshire/P2v1/pasatiempo2.html
+++ b/SunnyWiltshire/P2v1/pasatiempo2.html
@@ -21,7 +21,7 @@
                 <h2>Escritos, lecturas favoritas y datos curiosos...</h2>
             </header>
             <p>Si bien me gustan todas las artes y creo que he probado la mayoría, hay dos que me llenan el alma. Desde secundaria he escrito y me ha encantado poder expresarme a través de historias. Me gusta plasmar mis sentimientos en escritos; últimamente solo he escrito cuando me lo dictan mis emociones. Desde que estaba en la escuela, cuando mi computadora no tenía internet, buscaba cómo entretenerme en aquel aparato. Jugaba en el programa de mi primera Encarta y, cuando descubrí el paquete de Office, fue algo completamente nuevo para mí. Ahí, además de empezar mi amor hacia la escritura, nació una curiosidad por la ofimática, y desde entonces me vi un poco en el área de TI. Empecé escribiendo historias sobre personajes, por lo general de romance. Después las publiqué en una aplicación, tuvieron un poco de fama en la comunidad en la que estaba y les di un final. Más tarde hice historias en mi libreta, poesía, todas ellas inconclusas.</p>
-            <img width="500px" src="img/Escritura.jpg" alt="Persona Escribiendo En Un Cuaderno Al Lado De Macbook">
+            <img width="500px" src="https://sunnywiltshire.github.io/Ev1P1/img/Escritura.jpg" alt="Persona Escribiendo En Un Cuaderno Al Lado De Macbook">
             <footer>
             <p>Al momento de entregar mis trabajos de español, daba todo de mí. Recuerdo que una vez me pidieron un cuento y, según mis compañeros, yo le había entregado “un libro” a mi maestra. Amo la escritura porque, si hay algo que me gusta experimentar como lectora, es la emoción de ver cómo la trama da un giro completamente inesperado, llorar por cómo terminó una historia, quedarme pasmada por las decisiones o secretos que revelaron los personajes de último momento. Quería que cualquiera que leyera mis escritos se sintiera así: que leyera con emoción, que percibiera el amor que quería transmitir por medio de mis palabras, o el odio, la duda o el resentimiento que sentía en ese entonces.</p>
             </footer>
@@ -39,7 +39,7 @@
         </ul>
     </aside>
     <footer>
-
+        <p>Creado por: VLMG (AKA: SunnyW.py)</p>
     </footer>
 </body>
 </html>
