--- a/ErickLTI/pasatiemposv2/pagina1.html
+++ b/ErickLTI/pasatiemposv2/pagina1.html
@@ -4,29 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pasatiempos</title>
+    <link rel="stylesheet" href="pagina1.css">
 </head>
 <body>
     <header>
-        <h1>Mis pasatiempos.</h1>
-
+        <h1>Mis pasatiempos</h1>
+        <hr>
         <nav>
-            <button><a href="" target="_blank">Pasatiempo 1</a></button>
-        </nav>
-
-        <nav>
-            <button><a href="" target="_blank">Pasatiempo 2</a></button>
-        </nav>
-
-        <nav>
-            <button><a href="" target="_blank">Pasatiempo 3</a></button>
-        </nav>
-
-        <nav>
-            <button><a href="" target="_blank">Pasatiempo 4</a></button>
+            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina2.html" target="_blank">Pasatiempo 1</a></button>
+            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina3.html" target="_blank">Pasatiempo 2</a></button>
+            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina4.html" target="_blank">Pasatiempo 3</a></button>
+            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina5.html" target="_blank">Pasatiempo 4</a></button>
         </nav>
     </header>
-    <main></main>
-    <aside></aside>
-    <footer></footer>
+    <hr>
+    <main>
+        <h3>En esta página se encuntran los links que llevan a mis pasatiempos. Cada link fue hecho a base de esfuerzo. Espero mi trabajo sea de tu agrado.</h3>
+        <video controls width="300" src="https://www.pexels.com/es-es/download/video/7063373/"></video>
+    </main>
+
+    <footer>
+        <address>Desarrollado por EYMC.</address>
+    </footer>
 </body>
 </html>
