--- a/ErickLTI/pasatiemposv2/pagina4.html
+++ b/ErickLTI/pasatiemposv2/pagina4.html
@@ -20,8 +20,8 @@
             <!-- Desarrollo -->
             <h4>El gimnasio es una disciplina en la cual he encontrado satisfacción. El construir tu cuerpo a base de dolor y constancia, siento que yo forja la disciplina de la persona. Es fácil de explicar. Si quieres resultados, trabaja. Si quieres cargar más peso, trabaja.</h4>
             <img width="275" height="375" src="https://images.pexels.com/photos/260352/pexels-photo-260352.jpeg" alt="">
-            <img width="275" height="375" src="imagenes/1000152103.jpg" alt="">
-            <img width="275" height="375" src="imagenes/1000152101.jpg" alt="">
+            <img width="275" height="375" src="https://images.pexels.com/photos/4164849/pexels-photo-4164849.jpeg" alt="">
+            <img width="275" height="375" src="https://images.pexels.com/photos/2652236/pexels-photo-2652236.jpeg" alt="">
             <img width="275" height="375" src="https://images.pexels.com/photos/4164765/pexels-photo-4164765.jpeg" alt="">
             <h4>Un poco de mi progreso en lo que se ha vuelto una forma de vida para mí. Me considero principiante en esto del gym, pero poco a poco, con esfuerzo y dedicación, vas mutando.</h4>
             <footer>
