--- a/NerickRamirez/PasatiemposV2/Pagina3.html
+++ b/NerickRamirez/PasatiemposV2/Pagina3.html
@@ -51,8 +51,9 @@
                     <li>
                         2. EAFC (24 y 25)
                     </li>
-                <img src="img/eafc24.webp" alt="Fifa24" class="imgjuego2">
-                <img src="img/eafc25.jpeg" alt="Fifa25" class="imgjuego3">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/TSi0iJYSQ24?si=TLOniRr3by6Zdd-n" 
+                title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <p>
                     EAFC (anteriormente llamado FIFA) es un juego de futbol que llevo jugando aproximadamente unos 15 años. Este juego
                     me entretiene mucho, porque tu puedes decidir que hacer, es decir, te dan a elegir si quieres ser un jugador, un
