--- a/NerickRamirez/PasatiemposV2/Pagina4.html
+++ b/NerickRamirez/PasatiemposV2/Pagina4.html
@@ -46,9 +46,9 @@
             </article>
         </section>
 
-                <footer>
+        <footer>
             <address>
-                <p>Apodaca N.L.</p>
+                <p>Apodaca <abbr title="Nuevo Leon">N.L.</abbr></p>
                 <p>Desarrollado por Nerick Ramirez - Fundamentos de Desarrollo Web</p>
             </address>
             
