--- a/Marikve7/pasatiempos2/pag1.html
+++ b/Marikve7/pasatiempos2/pag1.html
@@ -9,7 +9,19 @@
 <body>
 
     <main>
-        <h1>Mis pasatiempos pt2</h1>
+        <header>
+            <h1>Mis pasatiempos pt2</h1>
+            <h2>Página 1 - Actividad recreativa</h2>
+        </header>
+
+        <nav>
+            <ul>
+                <li><a href="pagina2.html">Ir a Página 2 - Música</a></li>
+                <li><a href="pagina3.html">Ir a Página 3 - Series</a></li>
+                <li><a href="pagina4.html">Ir a Página 4 - Tablas</a></li>
+                <li><a href="pagina5.html">Ir a Página 5 - Formulario</a></li>
+            </ul>
+        </nav>
 
         <section>
             <header>
@@ -19,7 +31,7 @@
             <article>
                 <h3>Bailar</h3>
                 <p>Un pasatiempo que me gusta mucho es bailar, me gusta
-                    aprenderme las coreografias.De vez en cuando yo y mis 
+                    aprenderme las coreografias. De vez en cuando yo y mis 
                     amigas vamos a competencias, y eso me gusta porque paso tiempo con ellas.</p>
                 <img width=300px  src="fotos/bailar 1.jpg" alt="imagen de siluetas de personas bailando">
                 <img width=275px  src="fotos/bailar 2.jpg" alt="imagen de siluetas de personas bailando">
@@ -27,15 +39,44 @@
         </section>
 
         <section>
-            <header>
+            <article>
                 <h3>Bailes</h3>
+                <hr>
                 <p>Estos son algunas de las canciones que me gusta bailar, aunque la verdad me gusta bailar 
-                    de todo tipo, solo que me voy más por este género. 
+                    de todo tipo de música, solo que me voy más por este género. 
                 </p>
-                <button><a href="https://youtu.be/HK3LjI2InOg?si=Ch-Rx62l1vkpHbWd">J-hope "Killin it girl"</a></button>
+
+                <ul>
+                    <li><a href="https://youtu.be/HK3LjI2InOg?si=Ch-Rx62l1vkpHbWd">J-hope "Killin it girl"</a></li>
+                    <li><a href="https://youtu.be/aqW4xXUgmno?si=w7XKFWWdf61ESS7P">BTS "Run BTS"</a></li>
+                    <li><a href="https://youtu.be/M_EpTvMOnT0?si=Zr5L-wNchMTu3Qwd">Jungkook "Standing next to you"</a></li>
+                    <li><a href="https://youtu.be/IkeZX2hnoOk?si=GjAiDhisehSXfGAE">BTS "Butter remix""</a></li>
+                </ul>
+            </article>
         </section>
 
+        <section>
+            <article>
+                <h3>Mis presentaciones</h3>
+                <hr>
+                <p>Por aquí muestro un poquito más de lo que me gusta, son mis presentaciones
+                    en competencias de eventos de Kpop, como ya lo mencione anteriormente esto
+                    es un pasatiempo que me gusta mucho compartirlo con amigas. 
+                </p>
 
+                <ul>
+                    <li><a href="https://youtu.be/ZrhgYkVLi64?si=kXTx69JmlPWBWjbb">Whiplash - Aespa (min 11:30)</a></li>
+                    <li><a href="https://youtu.be/_ZxN8udc8FY?si=-OoJ4JiWd5HfiSTI">Brought the heat back - Enhypen (min 32:50)</a></li>
+                </ul>
+            </article>
+        </section>
+
+        <aside>
+            <h3>Nota-</h3>
+            <p>Como no suelo hacer ejercicio seguido, si estoy consciente que se debe hacerlo, 
+                como el baile ayuda con eso también es una de las razones por las cual me gusta :D
+            </p>
+        </aside>
     </main>
 
     <footer>
