--- a/ErickLTI/pasatiemposv2/index.html
+++ b/ErickLTI/pasatiemposv2/index.html
@@ -11,10 +11,10 @@
         <h1>Mis pasatiempos</h1>
         <hr>
         <nav>
-            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina2.html" target="_blank">Pasatiempo 1</a></button>
-            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina3.html" target="_blank">Pasatiempo 2</a></button>
-            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina4.html" target="_blank">Pasatiempo 3</a></button>
-            <button><a href="http://127.0.0.1:5500/ErickLTI/pasatiemposv2/pagina5.html" target="_blank">Pasatiempo 4</a></button>
+            <button><a href="pagina2.html" target="_blank">Pasatiempo 1</a></button>
+            <button><a href="pagina3.html" target="_blank">Pasatiempo 2</a></button>
+            <button><a href="pagina4.html" target="_blank">Pasatiempo 3</a></button>
+            <button><a href="pagina5.html" target="_blank">Pasatiempo 4</a></button>
         </nav>
     </header>
     <hr>
