Actualización de index principal

--- a/ErickLTI/index.html
+++ b/ErickLTI/index.html
@@ -56,6 +56,32 @@
                 </footer>
             </section>
 
+            <h2>Práctica 3</h2>
+
+            <section>
+                <header>
+                    <h3>Esta sección presenta los elementos solicitados por el maestro para la validación de la práctica 3.</h3>
+                </header>
+
+                <!-- desarrollo -->
+                 <li>
+                    <a href="https://fdw52ad2025.github.io/website52/ErickLTI/pasatiemposv2/index.html">Página principal de pasatiempos</a>
+                 </li>
+
+                 <li>
+                    <a href="https://github.com/FDW52AD2025/website52/commits/main/ErickLTI?since=2025-08-20&until=2025-08-22">Commits del día 08/27/25</a>
+                 </li>
+
+                 <li>
+                    <a href="https://github.com/FDW52AD2025/website52/commits/main/ErickLTI?since=2025-08-27&until=2025-08-29">Commits del día 08/27/25 - 08/29/25</a>
+                 </li>
+                 
+
+                <footer>
+                    <p>Práctica realizada entre 27 y 29 de Agosto del año 2025</p>
+                </footer>
+            </section>
+
 
 
         </article>
