Se termino pasatiempo 1 y 2

--- a/TheRafaMan06/pasatiemposver2/pasatiempo5.html
+++ b/TheRafaMan06/pasatiemposver2/pasatiempo5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deportes</title>
+    <title>Musica</title>
     <link rel="stylesheet" href="style5.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
                 Inicio
             </a>
             
-            <a href="pasatiempo2.html" class="menu-button">
+            <a href="pasatiempo1.html" class="menu-button">
                 <span class="menu-icon">⚽</span>
                 Deportes
             </a>
