--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -62,7 +62,7 @@
                 </p>
 
                 <ul>
-                    <li></li>
+                    <li><a href="http://127.0.0.1:5500/Marikve7/pasatiempos2/pagina1.html">Link de página pasatiemmpos 2</a></li>
                 </ul>
 
                 <h4>Fecha commits</h4>
