link de commit en clase y commits

--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -63,6 +63,8 @@
 
                 <ul>
                     <li><a href="http://127.0.0.1:5500/Marikve7/pasatiempos2/pagina1.html">Link de página pasatiemmpos 2</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-08-26&until=2025-08-27">Link de commits en clase</a></li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7">Link de commits</a></li>
                 </ul>
 
                 <h4>Fecha commits</h4>
