--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <li id="a15"><a href="diegoalgosa/index.html">diegoalgosa </a></li>
           <li id="a16"><a href="ernesgarcia06/index.html">ernesgarcia06 </a></li>
           <li id="a17"><a href="#">HERNANDEZ SAUCEDA EVELYN MICHEL </a></li>
-          <li id="a18"><a href="/Marikve7/index.html">Marikve7</a></li>
+          <li id="a18"><a href="Marikve7/index.html">Marikve7</a></li>
           <li id="a19"><a href="RdeReimer/index.html">RdeReimer</a></li>
           <li id="a20"><a href="#">LOZANO RAMOS CHRISTIAN LEONARDO </a></li>
           <li id="a21"><a href="ivanmane\index.html">ivanmane </a></li>
