--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -60,6 +60,7 @@
                     de los pasatiempos de la practica 1, solo aquí se nos encargó agregarle
                     un poco más de cosas, como las etiquetas, formulario y tablas.
                 </p>
+                <p><a href="pas"></a></p>
 
                 <ul>
                     <li><a href="http://127.0.0.1:5500/Marikve7/pasatiempos2/pagina1.html">Link de página pasatiemmpos 2</a></li>
