--- a/NerickRamirez/index.html
+++ b/NerickRamirez/index.html
@@ -32,7 +32,7 @@
             En esta tercer practica se actualizo la pagina de nuestros pasatiempos, de modo que ahora lo dividimos en 5 paginas.
         </p>
         <ul>
-            <li><a href="PasatiemposV2/Pagina1.html">Pasatiempos Version 2</a></li>
+            <li><a href="PasatiemposV2/PaginaPrincipal.html">Pasatiempos Version 2</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits?author=NerickRamirez&since=2025-08-26&until=2025-08-27    ">Commits 27 de Agosto</a></li>
             <li><a href="https://github.com/FDW52AD2025/website52/commits?author=NerickRamirez">Commits</a></li>
         </ul>
