--- a/NerickRamirez/PasatiemposV2/Pagina1.html
+++ b/NerickRamirez/PasatiemposV2/Pagina1.html
@@ -14,6 +14,9 @@
     <nav>
         <ul>
             <li>
+                <a href="PaginaPrincipal.html">Menu Principal</a>
+            </li>
+            <li>
                 <a href="Pagina2.html">Peliculas</a>
             </li>
             <li>
