--- a/diegoalgosa/paginaprincipal.html
+++ b/diegoalgosa/paginaprincipal.html
@@ -39,6 +39,21 @@
                     <li><a href=https://github.com/FDW52AD2025/website52/commit/79d7de93a788f983e79ad6f315d22e7e5525ee06>Commits</a></li>
                 </ul>
             </section>
+            <section>
+                <h3>Practica 3</h3>
+                <p>Realizada el 29 de Agosto del 2025.</p>
+                <p>Se realizo la pagina de mis pasatiempos favoritos 2, agregando nuevas etiquetas.</p>
+                <ul>
+                    <li>
+                        <a href="https://diegoalgosa.github.io/demo/">Enlace página</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/FDW52AD2025/website52/commits/main/diegoalgosa/Pasatiempos2">Enlace commits 27 de agosto</a>
+                    </li>
+                    <li><a href="https://github.com/FDW52AD2025/website52/commit/bd16fe971b94e516b7034786b416fd1fb001dfa5">Enlace commits</a>
+                    </li>
+                </ul>
+            </section>
         </article>
     </main>
     <aside></aside>
