--- a/Marikve7/pasatiempos2/pagina5.html
+++ b/Marikve7/pasatiempos2/pagina5.html
@@ -12,6 +12,9 @@
         <header>
             <h1>Mis pasatiempos pt2</h1>
             <h2>Página 5 - Formulario</h2>
+            <ul>
+                <li><a href="index2.html">Regresar al indice principal</a></li>
+            </ul>
         </header>
 
         <nav>
