--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -22,6 +22,7 @@
                 </header>
 
                 <p>Practica 1 de EV1 - Se creó una página web sencilla sobre mis pasatimepos.</p>
+                <p>Enlaces pedidos:</p>
                 <ul>
                     <li><a href="https://github.com/Marikve7/Practica-1-EV1">Repositorio de Github</a></li>
                     <li><a href="https://github.com/Marikve7/Practica-1-EV1/commits/main/">Link de commits</a></li>
@@ -60,8 +61,13 @@
                     de los pasatiempos de la practica 1, solo aquí se nos encargó agregarle
                     un poco más de cosas, como las etiquetas, formulario y tablas.
                 </p>
-                <p><a href="pas"></a></p>
+                
+                <p>Enlace a la practica 3:</p>
+                <ul>
+                    <li><a href="http://127.0.0.1:5500/Marikve7/pasatiempos2/index2.html">enlace practica3</a></li>
+                </ul>
 
+                <p>Enlaces pedidos:</p>
                 <ul>
                     <li><a href="http://127.0.0.1:5500/Marikve7/pasatiempos2/pagina1.html">Link de página pasatiemmpos 2</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-08-26&until=2025-08-27">Link de commits en clase</a></li>
