--- a/Marikve7/pasatiempos2/index2.html
+++ b/Marikve7/pasatiempos2/index2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evidencias</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Fundamentos de desarrollo web</h1>
-        <h2>Evidencias</h2>
+        <h1>Mis pasatiempos pt2</h1>
+        <h2>Practica 3</h2>
     </header>
 
     <main>
@@ -17,15 +17,19 @@
         <section>
             <article>
                 <header>
-                    <h3>Practica 1</h3>
+                    <h3>Páginas:</h3>
                     <hr>
                 </header>
 
-                <p>Practica 1 de EV1 - Se creó una página web sencilla sobre mis pasatimepos.</p>
+                <p>Hola, aquí podrás encontrar mis pasatiempos favoritos y lo que más me gusta 
+                    hacer para distraerme un poco y tener tiempo para mi. 
+                </p>
                 <ul>
-                    <li><a href="https://github.com/Marikve7/Practica-1-EV1">Repositorio de Github</a></li>
-                    <li><a href="https://github.com/Marikve7/Practica-1-EV1/commits/main/">Link de commits</a></li>
-                    <li><a href="https://marikve7.github.io/Practica-1-EV1/">Página web publicada</a></li>
+                    <li><a href="pagina1.html">Ir a Página 1 - Actividad recreativa</a></li>
+                    <li><a href="pagina2.html">Ir a Página 2 - Música</a></li>
+                    <li><a href="pagina3.html">Ir a Página 3 - Series</a></li>
+                    <li><a href="pagina4.html">Ir a Página 4 - Tablas</a></li>
+                    <li><a href="pagina5.html">Ir a Página 5 - Formulario</a></li>
                 </ul>
             </article>
         </section>
