ultimo cambio index principal

--- a/Marikve7/index.html
+++ b/Marikve7/index.html
@@ -64,12 +64,12 @@
                 
                 <p>Enlace a la practica 3:</p>
                 <ul>
-                    <li><a href="http://127.0.0.1:5500/Marikve7/pasatiempos2/index2.html">enlace practica3</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/pasatiempos2/index2.html">enlace practica3</a></li>
                 </ul>
 
                 <p>Enlaces pedidos:</p>
                 <ul>
-                    <li><a href="http://127.0.0.1:5500/Marikve7/pasatiempos2/pagina1.html">Link de página pasatiemmpos 2</a></li>
+                    <li><a href="https://fdw52ad2025.github.io/website52/Marikve7/pasatiempos2/index2.html">Link de página pasatiempos 2</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7&since=2025-08-26&until=2025-08-27">Link de commits en clase</a></li>
                     <li><a href="https://github.com/FDW52AD2025/website52/commits/main/?author=Marikve7">Link de commits</a></li>
                 </ul>
