--- a/Marikve7/pasatiempos2/pagina1.html
+++ b/Marikve7/pasatiempos2/pagina1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividad recreativa</title>
+    <title>Bailar</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
