--- a/IlseOjeda/index.html
+++ b/IlseOjeda/index.html
@@ -37,7 +37,7 @@
     <section class="links">
             <h2>Links solicitados</h2>
             <ul>
-                <li><a href="">Página pasatiempos versión 2</a></li>
+                <li><a href="pasatiemposv2/index.html">Página pasatiempos versión 2</a></li>
                 <li><a href="">Commits 27 de agosto</a></li>
                 <li><a href="">Commits 28 al 29 de agosto</a></li>
 
