--- a/IlseOjeda/pasatiemposv2/index.html
+++ b/IlseOjeda/pasatiemposv2/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nombre del pasatiempo</title>
+    <title>Mis Hobbies</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Mis pasatiempos</h1>
+        <h1>Pasatiempos Favoritos</h1>
+        <p><small>Versión 2 - Práctica 3</small></p>
         <nav>
             <ul>
                 <li><a href="cocinar.html">Cocinar</a></li>
                 <li><a href="terror.html">Terror</a></li>
                 <li><a href="gatos.html">Gatos</a></li>
                 <li><a href="correr.html">Correr</a></li>
-                <li><a href="musica.html">Formulario</a></li>
+                <li><a href="formulario.html">Formulario</a></li>
             </ul>
         </nav>
     </header>
@@ -29,7 +30,7 @@
     </main>
     <footer>
         <p>Desarrollado por Ilse Ojeda
-        <img src="logo.png" alt="Logo" class="logo-footer">
+        <img src="img/logo.png" alt="Logo" class="logo-footer">
         </p>
     </footer>
 </body>
