Pagina 3 y cambios menu principal

--- a/ernesgarcia06/pasatiemposver2/index.html
+++ b/ernesgarcia06/pasatiemposver2/index.html
@@ -10,10 +10,15 @@
     <header>
         <a href="https://fdw52ad2025.github.io/website52/ernesgarcia06/index.html"><span style="font-size: 30px;">⬅️</span></a>
         <h1>¿Quién soy?</h1>
+        <nav>
+            <ul>
+                <audio controls src="img/quien-es-este.mp3">¿Quién es este?</audio>
+            </ul>
+        </nav>
     </header>
     <main>
         <p>Soy Luis Ernesto Guzmán García, tengo 18 años, estudio la carrera de <abbr title="Licenciado en Tecnologias de Información">LTI</abbr> y vivo en Monterrey, Nuevo León desde que nací.</p>
-        <p>A continuación presentare algunos de mis pasatiempos preferidos para que me conozcan un poco más.</p>
+        <p>A continuación presentaré algunos de mis pasatiempos preferidos para que me conozcan un poco más.</p>
     </main>
     <nav>
         <ul>
