--- a/ernesgarcia06/pasatiemposver2/pagina2.html
+++ b/ernesgarcia06/pasatiemposver2/pagina2.html
@@ -31,7 +31,7 @@
             <section>
                 <header>
                     <p>A partir del año pasado (2024) me empezó a llamar mucho la atención el béisbol, empecé a investigar mucho sobre este deporte, para tambien poder verlo con mi abuelo y entender que era lo que estaba pasando.</p>
-                    <p>Después de que logre entender el deporte quise empezar a ir al estadio, este año (2025) he ido muchas veces y cada vez que visito el estadio me gusta mucho mas este deporte.</p>
+                    <p>Después de que logre entender el deporte quise empezar a ir al estadio, este año (2025) he ido muchas veces y cada vez que visito el estadio me gusta mucho más este deporte.</p>
                     <p>En la <abbr title="Liga Mexicana de Béisbol">LMB</abbr> apoyo a los Sultanes de Monterrey o tambien conocidos como los <small><i>Fantasmas Grises.</i></small> Otra razón por la que me gusta ir es por que han estado regalando muchas cosas de coleccion como lo son los Bobbleaheads.</p>
                     <div class="imagenes">
                         <img src="img/kelly.jpg" alt="Bobbleahead Roberto Kelly" width="700" height="700">
